--- a/client/app/assets/css/redash.css
+++ b/client/app/assets/css/redash.css
@@ -359,6 +359,11 @@ counter-renderer counter-name {
   display: block;
 }
 
+calendar-renderer .popover-content ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
 .box {
   font: 10px sans-serif;
 }
